# amdemos-artc

./: README.md  ReleaseNotes.md
Android/: README.md  README_English.md
Android/ARTCExample/: key.properties  keystore  settings.gradle
Android/ARTCExample/AdvancedUsage/: build.gradle
Android/ARTCExample/AdvancedUsage/src/main/cpp/: CMakeLists.txt  texture_renderer.cpp
Android/ARTCExample/BasicUsage/: build.gradle
Harmony/: README.md  README_English.md
Harmony/ARTCExample/: .gitignore  build-profile.json5  oh-package.json5
Harmony/ARTCExample/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  origin_audio_data.cpp  origin_audio_data.h  origin_video_data.cpp  origin_video_data.h
Harmony/ARTCExample/entry/src/main/cpp/types/libadvancedusage/: index.d.ts  oh-package.json5
Mac/: README.md  README_English.md
Mac/ARTCExample/: ARTCExample.entitlements  AppDelegate.h  AppDelegate.m  Info.plist  LoginViewController.h  LoginViewController.m  main.m
Mac/ARTCExample.xcodeproj/: project.pbxproj
Windows/: ARTCExample.sln  README.md  README_English.md
Windows/ARTCExample/: ARTCEventListernerImpl.cpp  ARTCEventListernerImpl.h  ARTCExample.cpp  ARTCExample.h  ARTCExample.rc  ARTCExample.vcxproj  ARTCExampleDefine.h  ARTCExampleDlg.cpp  ARTCExampleDlg.h  ARTCLoginDlg.cpp  ARTCLoginDlg.h  ARTCScreenShareEncodeConfigDlg.cpp  ARTCScreenShareEncodeConfigDlg.h  ARTCSelectDlg.cpp  ARTCSelectDlg.h  ARTCTools.cpp  ARTCTools.h  ReadMe.txt  resource.h  stdafx.cpp
iOS/: Podfile  README.md  README_English.md
iOS/ARTCExample/: ARTCExample.entitlements  AppDelegate.swift  Info.plist  MainViewController.swift
iOS/ARTCExample.xcodeproj/: project.pbxproj
iOS/ARTCExample.xcworkspace/: contents.xcworkspacedata
iOS/ScreenShareExtension/: SampleHandler.h  SampleHandler.m
(+364 files in other folders)
